--- a/app/views/runners/_form.html.erb
+++ b/app/views/runners/_form.html.erb
@@ -30,6 +30,11 @@
       <%= f.label :date_of_birth %>
       <%= f.date_select :date_of_birth, {:order => [:day, :month, :year],:prompt => true, :start_year => 1940, :end_year => Time.now.year} %>
     </div>
+
+    <div class="field">
+      <%= f.label :coach_id %>
+       <%= f.select :coach_id, Coach.find(:all, :order => "first_name,last_name").collect {|s| [(s.first_name + " " + s.last_name), s.id]} %>
+    </div>
   </fieldset>
 
   <div class="actions">
