Add: further associations added

--- a/app/views/runners/_form.html.erb
+++ b/app/views/runners/_form.html.erb
@@ -33,7 +33,10 @@
 
     <div class="field">
       <%= f.label :coach_id %>
-       <%= f.select :coach_id, Coach.find(:all, :order => "first_name,last_name").collect {|s| [(s.first_name + " " + s.last_name), s.id]} %>
+
+   
+
+       <%= f.select :coach_id, Coach.find(:all, :order => "first_name,last_name").collect {|s| [s.name, s.id]} %>
     </div>
   </fieldset>
 
