--- a/app/views/runners/show.html.erb
+++ b/app/views/runners/show.html.erb
@@ -4,6 +4,8 @@
 <p><%= @runner.club %></p>
 <p><%= @runner.county %></p>
 <p><%= @runner.date_of_birth %></p>
+<p><%= @runner.coach.name %></p>
+
 
 
 <%= link_to 'Back home', runners_path %>
