--- a/app/views/runners/index.html.erb
+++ b/app/views/runners/index.html.erb
@@ -1,33 +1,24 @@
 <h1>Runners Index page</h1>
-<p><%= @runners.count %> runners listed</p>
+<p> runners listed for </p>
 <%= notice %>
-<p><%= link_to "Add Runner", new_runner_path %></p>
-<table>
+
+<table border="1" width="80%" cellspacing="0" cellpadding="5">
     <thead>
   <tr>
-    <th>First name</th>
-    <th>Last name</th>
-    <th>Gender</th>
-    <th>Date of Birth</th>
-    <th>County</th>
+    <th>Name</th>
     <th>Club</th>
-    <th></th>
     <th></th>
   </tr>
 </thead>
 <tbody>
-<% @runners.each do |runner| %>
+<% @runner.each do |runner| %>
   <tr>
-    <td><%= link_to runner.first_name, edit_runner_path(runner) %></td>
-    <td><%= runner.last_name %></td>
-    <td><%= runner.gender %></td>
-    <td><%= runner.date_of_birth %></td>
-    <td><%= runner.county %></td>
+    <td><%= runner.runner_name %></td>
     <td><%= runner.club %></td>
-    <td><%= link_to 'Destroy', runner, :method => :delete, :confirm => 'Are you sure?' %></td>
-    <td></td>
+    <td><%= link_to "Edit", edit_runner_path(runner) %></td>
   </tr>
 <% end %>
 </tbody>
 </table>
 
+<p><%= link_to "Add New Runner", new_runner_path %></p>
